...
        android:text="Enter current location"
        android:textColor="#ffffff"
        android:paddingBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_current_location"
        android:fontFamily="@font/googlesans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_theme"
...
        android:ems="20"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/text_18"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_location"
        android:fontFamily="@font/googlesans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/milk_white"
        android:textStyle="bold"
        android:textSize="@dimen/text_20"
...
